# feedback_agent_v1

./: .gitignore  README.md  feedback_notebook.ipynb  pyproject.toml
docs/: feedback_insight_users_sep.xlsx
src/: __init__.py  example_main.py  main.py
src/agents/: __init__.py  classifier.py  reporter.py
src/config/: settings.py
src/models/: __init__.py  feedback.py  report.py
src/nodes/: __init__.py  classify.py  export.py  load_data.py  load_data_excel.py  load_data_hive.py  report.py
src/prompts/: __init__.py  classifier_prompt.py  reporter_prompt.py
src/tools/: __init__.py
src/utils/: __init__.py  slack_client.py
src/workflows/: __init__.py  feedback_workflow.py  state.py
