[project]
name = "feedback-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.0.1",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
]
